# cpp-app

./: CMakeLists.txt  Dockerfile  Doxyfile  Doxyfile.in  Makefile  Makefile.inc  README.md  sonar-project.properties
config/: config.hpp  config.hpp.in  cpp.conf
html/: customdoxygen.css  doxy-boot.js  footer.html  header.html  paper-dashboard.css
latex/: header.tex
src/: CMakeLists.txt  Makefile  example_app.cpp  example_cpp_app.cpp
src/utils/: CMakeLists.txt  Makefile  example.cpp  example.hpp  exceptions.hpp  log.cpp  log.hpp
tests/: CMakeLists.txt  Makefile  test_example.cpp  test_log.cpp
